<resources>
    <string name="app_name">DISHA</string>
    <string name="video1">Raghu Introduction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="library">Library</string>
    <string name="begin_again">Begin Again</string>
    <string name="select_days">Select Day of the week</string>
    <string name="select_med">Select Medicine</string>
    <string name="med_times">How many times a day? </string>
    <string name="repeat">Repeat</string>
    <string name="select_inj">Select Injection</string>
    <string name="select_lastday">Select Last Date</string>
    <string name="set_date">Set Date</string>
    <string name="select_activity">Select Activity</string>
    <string name="activity_added">Activity Added</string>
    <string name="title_iadl">Self Reliance</string>
    <string name="bmi">BMI</string>
    <string name="valid_value">Enter Valid Value</string>
    <string name="bmi_low">Your BMI is lower than normal. Please take balanced diet. Also, share this with your doctor. </string>
    <string name="bmi_high">Your BMI is higher than normal. Please take balanced diet and exercise every day. Also, share with your doctor</string>
    <string name="bmi_normal">Well done! You are doing well.</string>
    <string name="bp_low">Your BP is lower than normal. It is important to share this with your doctor for a timely action</string>
    <string name="bp_high">Your BP is higher than normal. It is important to share this with your doctor for a timely action.</string>
    <string name="bp_normal">Great! Your BP is in normal range</string>
    <string name="tsh_low">Your thyroid is lower than normal. It is important to share this with your doctor for a timely action</string>
    <string name="tsh_high">Your thyroid is higher than normal. It is important to share this with your doctor for a timely action.</string>
    <string name="tsh_normal">Great! Your thyroid is in normal range</string>
    <string name="lipid_low">Your Serum Cholestrol is lower than normal. It is important to share this with your doctor for a timely action</string>
    <string name="lipid_high">Your Serum Cholestrol is higher than normal. It is important to share this with your doctor for a timely action. </string>
    <string name="lipid_normal">Great! Your Serum Cholestrol is in normal range</string>
    <string name="lipid_high_border">Your Serum Cholestrol is on borderline higher side. It is important to share this with your doctor for a timely action. </string>
    <string name="sugar_low">Your Blood Sugar is lower than normal. It is important to share this with your doctor for a timely action</string>
    <string name="sugar_high">Your Blood Sugar is higher than normal.</string>
    <string name="sugar_normal">Great! Your Blood Sugar is in normal range</string>
    <string name="diet">Eating Right</string>
    <string name="summary">Summary</string>
    <string name="about_app">App Developed by CODESLAB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="want_alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="medic_adhere">Medical Adherence</string>
    <string name="last_date">Last date</string>
    <string name="daily_routine">Daily Routine</string>
    <string name="phy_health">Physical Health</string>
    <string name="phy_health_desc">Some Informative Text Description about the necessity of Physical Health Monitoring</string>
    <string name="health_monitoring_label">Health Measures</string>
    <string name="placeholder">Placeholder Information</string>
    <string name="title_activity_demo">Demo</string>
    <string name="enter_value_hint">Enter value</string>
    <string name="units_placeholder">unit</string>
    <string name="skip_text">skip</string>
    <string name="submit_text">submit</string>
    <string name="title_home">Home</string>
    <string name="title_sarthi">Sarthi</string>
    <string name="title_dashboard">Info</string>
    <string name="title_notifications">Progress</string>
    <string name="title_activity_health_monitor_tabbed">Health Monitor</string>
    <string name="submit">Submit</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="test_prompt">Choose a test</string>
    <string name="other_tests_label">Other Tests</string>
    <string name="common_tests_label">Common Tests</string>
    <string name="title_activity_medical_adherence">Medical Adherence</string>
    <string name="add_medicine_information">Add medicine information</string>
    <string name="add_alarm_information">Add Alarm</string>
    <string name="add_injection_information">Add injection information</string>
    <string name="blank_inj_record_text">No injection record! Click \'+\' button above to add injection information!</string>
    <string name="blank_med_record_text">No medicine record! Click \'+\' button above to add medicine information!</string>
    <string name="medicine_name">Select Medicine</string>
    <string name="injection_name">Select Injection</string>
    <string name="med_desc">Short Medicine Description (Optional)</string>
    <string name="inj_desc">Short Injection Description (Optional)</string>
    <string name="def_med_morning">08:00</string>
    <string name="med_field_error">Enter a name of the medicine</string>
    <string name="inj_field_error">Enter a name of the injection</string>
    <string name="done">Done</string>
    <string name="injection_schedule">Injection Schedule</string>
    <string name="select_daily_tasks">Select daily tasks</string>
    <string name="blank_daily_rout_record_text">No daily routine task record! Click \'+\' button above to add daily task information!</string>
    <string name="psycho_education">Psycho Education</string>
    <string name="daily_log">Daily Log</string>
    <string name="psycho_edu_ques">PSychoeducation Questions</string>
    <string name="team_saksham">Team Saksham</string>
    <string-array name="questions">
        <item>What is physical health monitoring?</item>
        <item>Why is physical health monitoring important for you?</item>
        <item>What are the reasons for increased physical health problems in patients with schizophrenia?</item>
        <item>Why should we do regular physical monitoring in patients with schizophrenia?</item>
    </string-array>
    <string-array name="answers">
		<item>
			<p align="right">
            Regular assessment and charting of few important physical parameters by the doctor at fixed intervals is called physical health monitoring.
        It includes few simple physical tests such as Blood pressure, pulse monitoring etc. performed by the doctor during your visit and some blood investigations.
        The interval of monitoring (e.g. monthly, weekly etc.) will be decided by your treating doctor and communicated to you.
                Physical health monitoring is an integral part in the management of patients with schizophrenia. </p>
		</item>
        <item>People with schizophrenia have increased rates of physical illness compared with the general population.
        Research has shown that the life expectancy of people with schizophrenia is reduced by 10 years as compared to general population.</item>
        <item>There are several reasons for increased physical health problems:\n
        - Lack of monitoring and assessment of various parameters which can help in early detection of physical problems.\n
        - The health care needs of patients with mental illnesses are sometimes overlooked.\n
        - Patients with schizophrenia are often not able to communicate their physical problems to the doctor clearly.\n
        - Improper dietary habits\n
        - Lack of physical activity\n
        - Disturbances in lifestyle due to schizophrenia (e.g. poor self-care, disturbed sleep etc.)\n
        - Not following treatment regimen properly. (poor adherence)\n
        - Co-morbid substance use disorders (alcohol, tobacco, cannabis) worsens the physical health.\n
        - Side effects of medications
        </item>
        <item>Early detection of physical problems leads to effective management
        It can prevent development of full-blown metabolic disorders such as Diabetes Mellitus, Hypertension, if corrected early.
        It motivates lifestyle modifications at the earliest which also helps in improvement of physical health
        Side effects of medicines are also detected early.
        </item>
    </string-array>
    <string-array name="daily_routine_que">
        <item>Why do you need to wake up on time?</item>
        <item>Why do you need to brush your teeth daily?</item>
        <item>Why do you need to take bath daily?</item>
        <item>What is the importance of taking meals and on time?</item>
        <item>Why do you need to take 8 hours of sleep and maintain regular sleep time?</item>
        <item>What is the importance of walking for you? </item>
        <item>Why do you need to engage in leisure activities daily?</item>
    </string-array>
    <string name="language_pref_prompt">Choose Language Preference</string>
    <string name="what_activity">NEW ACTIVITY YOU TRIED TODAY</string>
    <string name="what_activity_you_tired">What activity you tried today?</string>
    <string name="what_experience">How was your Experience?</string>
    <string name="what_experience_hint">Share with us your experience</string>
     <string name="hint_login">Enter patient email</string>
    <string name="hint_login_pwd">Enter Password</string>
    <string name="register">REGISTER</string>
    <string name="change_lang">Switch Language</string>
<string name="challenge">Did you face any Challenge?</string>
    <string name="weekly_log">WEEKLY LOG</string>
    <string name="Dates">DATES  </string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
</resources>