<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_log"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/mygrey"
                android:text="@string/what_activity_you_tired"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/new_activity_tried"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/what_activity"
                android:padding="10dp"
                android:background="@drawable/borderedittext"
                android:singleLine="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/mygrey"
                android:text="@string/what_experience"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:hint="@string/what_experience_hint"
                android:padding="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/borderedittext" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/mygrey"
                android:text="@string/challenge"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/hardships"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/borderedittext" />


            <Button
                android:id="@+id/submitLog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textColor="#fff"></Button>
        </LinearLayout>


    </ScrollView>
</LinearLayout>