<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.zuccessful.trueharmony.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
         android:minHeight="150dp"
        android:scaleType="centerInside"
        android:background="@color/navy_blue"
         android:src="@drawable/disha_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="30sp" android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/submit"
        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        app:layout_constraintVertical_bias="0.124" />

    <EditText
        android:id="@+id/patient_id_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:hint="@string/hint_login"
        android:inputType="text"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:hint="@string/hint_login_pwd"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_id_et" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/register"
        android:background="@null"
        android:textColor="@color/navy_blue"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />





        <com.zuccessful.trueharmony.utilities.CustomSpinner
            android:id="@+id/language_spinner"
            android:layout_width="200dp"   android:textColor="#ffffff"
            android:layout_height="wrap_content" android:layout_marginTop="20dp"
            android:entries="@array/language_arrays" app:layout_constraintStart_toStartOf="@+id/register_button"   app:layout_constraintTop_toBottomOf="@+id/register_button"
            android:prompt="@string/language_pref_prompt" />


    <Button  android:id="@+id/lang"
        android:layout_width="200dp"
        android:textColor="#000"

        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/language_spinner"   app:layout_constraintTop_toBottomOf="@+id/language_spinner"
        android:text="@string/change_lang"/>
 </android.support.constraint.ConstraintLayout>