<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddMedRecActivity"
    android:background="@color/background_grey">

    <RelativeLayout android:id="@+id/header_rel"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_margin"
        android:layout_marginTop="10dp"
         android:background="@color/orange"
        >

        <TextView android:id="@+id/header"
            android:layout_centerHorizontal="true"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/weekly_log"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_rel"
        >

        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dates"
            android:textStyle="bold"
            android:layout_margin="@dimen/fab_margin"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/navy_blue"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_week_dates"
             android:layout_margin="@dimen/fab_margin"
           android:textStyle="bold"
            android:textSize="@dimen/text_size_14"
             />

        <TextView android:id="@+id/dates_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:textSize="@dimen/text_size_14"

            ></TextView>
    </LinearLayout>

    <Spinner android:id="@+id/tasks_spinner"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corners"


        android:layout_height="wrap_content" android:layout_below="@id/linearlayout"></Spinner>

<RelativeLayout android:id="@+id/rel_mon"
    android:layout_width="wrap_content"
    android:layout_marginLeft="20dp"
    android:textSize="@dimen/text_size_14"
    android:layout_height="wrap_content" android:layout_below="@id/tasks_spinner"
    android:layout_marginTop="20dp">
    <TextView android:id="@+id/label_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/Monday"></TextView>
    <TextView android:layout_marginLeft="37dp" android:id="@+id/task_mon"
        android:layout_width="180dp" android:layout_toRightOf="@+id/label_mon"
        android:layout_height="wrap_content" android:text=""></TextView>
    <ImageView
        android:layout_width="30dp" android:layout_marginLeft="20dp"
        android:layout_height="30dp" android:id="@+id/img_mon" android:src="@drawable/sad_face" android:layout_toRightOf="@+id/task_mon"></ImageView>
</RelativeLayout>


    <RelativeLayout android:id="@+id/rel_tue"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_size_14"  android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@id/rel_mon" >
        <TextView android:id="@+id/label_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Tuesday"></TextView>
        <TextView android:layout_marginLeft="37dp" android:id="@+id/task_tue"
            android:layout_width="180dp" android:layout_toRightOf="@+id/label_tue"
            android:layout_height="wrap_content" android:text=""></TextView>
        <ImageView
            android:layout_width="30dp" android:layout_marginLeft="20dp"
            android:layout_height="30dp" android:id="@+id/img_tue" android:src="@drawable/sad_face" android:layout_toRightOf="@+id/task_tue"></ImageView>
    </RelativeLayout>


    <RelativeLayout android:id="@+id/rel_wed"  android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_size_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@id/rel_tue" >
        <TextView android:id="@+id/label_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Wednesday"></TextView>
        <TextView android:layout_marginLeft="13dp" android:id="@+id/task_wed"
            android:layout_width="180dp" android:layout_toRightOf="@+id/label_wed"
            android:layout_height="wrap_content" android:text=""></TextView>
        <ImageView
            android:layout_width="30dp" android:layout_marginLeft="20dp"
            android:layout_height="30dp" android:id="@+id/img_wed" android:src="@drawable/sad_face" android:layout_toRightOf="@+id/task_wed"></ImageView>
    </RelativeLayout>


    <RelativeLayout android:id="@+id/rel_thu"  android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_size_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@id/rel_wed" >
        <TextView android:id="@+id/label_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Thursday"></TextView>
        <TextView android:layout_marginLeft="30dp" android:id="@+id/task_thu"
            android:layout_width="180dp" android:layout_toRightOf="@+id/label_thu"
            android:layout_height="wrap_content" android:text=""></TextView>
        <ImageView
            android:layout_width="30dp" android:layout_marginLeft="20dp"
            android:layout_height="30dp" android:id="@+id/img_thu" android:src="@drawable/sad_face" android:layout_toRightOf="@+id/task_thu"></ImageView>
    </RelativeLayout>


    <RelativeLayout android:id="@+id/rel_fri"  android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@id/rel_thu" >
        <TextView android:id="@+id/label_fri"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/text_size_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Friday"></TextView>
        <TextView android:layout_marginLeft="50dp" android:id="@+id/task_fri"
            android:layout_width="180dp" android:layout_toRightOf="@+id/label_fri"
            android:layout_height="wrap_content" android:text=""></TextView>
        <ImageView
            android:layout_width="30dp" android:layout_marginLeft="20dp"
            android:layout_height="30dp" android:id="@+id/img_fri" android:src="@drawable/sad_face" android:layout_toRightOf="@+id/task_fri"></ImageView>
    </RelativeLayout>


    <RelativeLayout android:id="@+id/rel_sat"  android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_size_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@id/rel_fri" >
        <TextView android:id="@+id/label_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Saturday"></TextView>
        <TextView android:layout_marginLeft="30dp" android:id="@+id/task_sat"
            android:layout_width="180dp"  android:layout_toRightOf="@+id/label_sat"
            android:layout_height="wrap_content" android:text=""></TextView>
        <ImageView
            android:layout_width="30dp" android:layout_marginLeft="20dp"
            android:layout_height="30dp" android:id="@+id/img_sat" android:src="@drawable/sad_face" android:layout_toRightOf="@+id/task_sat"></ImageView>
    </RelativeLayout>


    <RelativeLayout android:id="@+id/rel_sun"  android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/text_size_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@id/rel_sat" >
        <TextView android:id="@+id/label_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/Sunday"></TextView>
        <TextView android:layout_marginLeft="40dp" android:id="@+id/task_sun"
            android:layout_width="180dp" android:layout_toRightOf="@+id/label_sun"
            android:layout_height="wrap_content" android:text=""></TextView>
        <ImageView
            android:layout_width="30dp" android:layout_marginLeft="20dp"
            android:layout_height="30dp" android:id="@+id/img_sun" android:src="@drawable/sad_face" android:layout_toRightOf="@+id/task_sun"></ImageView>
    </RelativeLayout>
</RelativeLayout>