<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddMedRecActivity"
    android:background="@color/background_grey">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/sa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_activity"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <Spinner
                android:id="@+id/med_name_et"
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/repeat"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ca.antonious.materialdaypicker.MaterialDayPicker
                android:id="@+id/repeat_days"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/med_times"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/med_reminder_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="updateTimes"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/med_reminder_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="updateTimes"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/med_reminder_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="updateTimes"
                    android:text="3" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/act_time_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:onClick="submitMed"
                android:text="@string/submit_text"
                android:textColor="@android:color/white"
                android:theme="@style/MyButton" />




        </LinearLayout>
    </ScrollView>



</RelativeLayout>